@@ -14,6 +14,7 @@ Build/MakeMans
 git-annex
 git-annex-shell
 git-remote-annex
+git-remote-p2p-annex
 git-remote-tor-annex
 man
 doc/.ikiwiki
