@@ -1,4 +1,4 @@
-all=git-annex git-annex-shell git-remote-annex git-remote-tor-annex mans docs
+all=git-annex git-annex-shell git-remote-annex git-remote-p2p-annex git-remote-tor-annex mans docs
 
 # set to "./Setup" if you lack a cabal program. Or can be set to "stack"
 BUILDER?=cabal
@@ -74,6 +74,9 @@ git-annex-shell: git-annex
 git-remote-annex: git-annex
 	@ln -sf git-annex git-remote-annex
 
+git-remote-p2p-annex: git-annex
+	@ln -sf git-annex git-remote-p2p-annex
+
 git-remote-tor-annex: git-annex
 	@ln -sf git-annex git-remote-tor-annex
 
@@ -93,6 +96,7 @@ install-bins: build
 	ln -sf git-annex $(DESTDIR)$(PREFIX)/bin/git-annex-shell
 	ln -sf git-annex $(DESTDIR)$(PREFIX)/bin/git-remote-annex
 	ln -sf git-annex $(DESTDIR)$(PREFIX)/bin/git-remote-tor-annex
+	ln -sf git-annex $(DESTDIR)$(PREFIX)/bin/git-remote-p2p-annex
 
 install-desktop: build Build/InstallDesktopFile
 	./Build/InstallDesktopFile $(PREFIX)/bin/git-annex || true
