@@ -2,6 +2,8 @@ git-annex (10.20250722) UNRELEASED; urgency=medium
 
   * p2p: Added --enable option, which can be used to enable P2P networks
     provided by external commands git-annex-p2p-<netname>
+  * Added git-remote-p2p-annex, which allows git pull and push to
+    P2P networks provided by external commands.
 
  -- Joey Hess <id@joeyh.name>  Wed, 30 Jul 2025 13:45:42 -0400
 
